<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/inf_fak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inf_fak"
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:id="@+id/alte_mensa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alte_mensa"
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:id="@+id/neue_mensa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/neue_mensa"
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:id="@+id/nürnberger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nürnberger"
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:id="@+id/münchner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/münchner"
        android:onClick="onCheckboxClicked"/>

    <Button
        android:id="@+id/marker_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auswahl"
        />
</LinearLayout>